Trying to fix CSS problem while a link is too long.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -209,6 +209,7 @@
 
 .post-content {
     margin-bottom: $spacing-unit;
+    white-space: pre-wrap;
 
     h2 {
         font-size: 32px;
